clients/rust/krad_radio_client.rs

use core::libc::*;
pub type Struct_kr_client_St = c_void;
pub type kr_client_t = Struct_kr_client_St;
pub type Struct_kr_shm_St = c_void;
pub type kr_shm_t = Struct_kr_shm_St;
pub type kr_response_t = Struct_kr_crate_St;
pub type kr_crate_t = Struct_kr_crate_St;
pub type kr_unit_path_t = Struct_kr_unit_path_St;
pub type kr_unit_control_t = Struct_kr_unit_control_St;
pub type kr_address_t = Struct_kr_address_St;
pub type kr_unit_t = c_uint;
pub const KR_STATION: c_uint = 1;
pub const KR_MIXER: c_uint = 2;
pub const KR_COMPOSITOR: c_uint = 3;
pub const KR_TRANSPONDER: c_uint = 4;
pub type kr_mixer_subunit_t = c_uint;
pub const KR_PORTGROUP: c_uint = 1;
pub const KR_EFFECT: c_uint = 2;
pub type kr_transponder_subunit_t = c_uint;
pub const KR_TRANSMITTER: c_uint = 1;
pub const KR_RECEIVER: c_uint = 2;
pub const KR_DEMUXER: c_uint = 3;
pub const KR_MUXER: c_uint = 4;
pub const KR_ENCODER: c_uint = 5;
pub const KR_DECODER: c_uint = 6;
pub const KR_ADAPTER: c_uint = 7;
pub type kr_station_subunit_t = c_uint;
pub const KR_STATION_UNIT: c_uint = 1;
pub const KR_CPU: c_uint = 2;
pub const KR_REMOTE: c_uint = 3;
pub type kr_unit_control_data_t = c_uint;
pub const KR_FLOAT: c_uint = 0;
pub const KR_INT32: c_uint = 1;
pub const KR_STRING: c_uint = 2;
pub struct kr_unit_control_value_t {
    pub integer: c_int,
    pub string: *c_schar,
    pub real: c_float,
}
pub type kr_transponder_control_t = c_uint;
pub const KR_BUFFER: c_uint = 1;
pub const KR_BITRATE: c_uint = 2;
pub struct kr_subunit_t {
    pub ptr: *c_void,
    pub zero: uint64_t,
    pub mixer_subunit: kr_mixer_subunit_t,
    pub compositor_subunit: kr_compositor_subunit_t,
    pub transponder_subunit: kr_transponder_subunit_t,
    pub station_subunit: kr_station_subunit_t,
}
pub struct kr_unit_control_name_t {
    pub portgroup_control: kr_mixer_portgroup_control_t,
    pub effect_control: kr_mixer_effect_control_t,
    pub compositor_control: kr_compositor_control_t,
    pub transponder_control: kr_transponder_control_t,
}
pub struct Struct_kr_unit_path_St {
    pub unit: kr_unit_t,
    pub subunit: kr_subunit_t,
}
pub struct kr_unit_id_t {
    pub number: c_int,
    pub name: [c_schar * 64],
}
pub struct Struct_kr_address_St {
    pub path: kr_unit_path_t,
    pub control: kr_unit_control_name_t,
    pub id: kr_unit_id_t,
    pub sub_id: c_int,
    pub sub_id2: c_int,
}
pub struct Struct_kr_unit_control_St {
    pub address: kr_address_t,
    pub data_type: kr_unit_control_data_t,
    pub value: kr_unit_control_value_t,
    pub duration: c_int,
}
pub struct kr_rep_ptr_t {
    pub actual: *c_void,
    pub tag: *kr_tag_t,
    pub remote: *kr_remote_t,
    pub mixer: *kr_mixer_t,
    pub portgroup: *kr_mixer_portgroup_t,
    pub compositor: *kr_compositor_t,
    pub radio: *kr_radio_t,
}
pub struct kr_rep_actual_t {
    pub actual: c_schar,
    pub tag: kr_tag_t,
    pub remote: kr_remote_t,
    pub mixer: kr_mixer_t,
    pub portgroup: kr_mixer_portgroup_t,
    pub compositor: kr_compositor_t,
    pub radio: kr_radio_t,
}
pub struct Struct_kr_crate_St {
    pub kr_client: *kr_client_t,
    pub addr: *kr_address_t,
    pub address: kr_address_t,
    pub inside: kr_rep_ptr_t,
    pub rep: kr_rep_actual_t,
    pub contains: uint32_t,
    pub notice: uint32_t,
    pub buffer: *c_uchar,
    pub size: uint32_t,
    pub integer: c_int,
    pub real: c_float,
    pub has_int: c_int,
    pub has_float: c_int,
}
#[link_args = "-lkradradio_client"]
pub extern "C" {
    fn kr_unit_control_data_type_from_address(++address: *kr_address_t,
                                              ++data_type:
                                                  *kr_unit_control_data_t) ->
     c_int;
    fn kr_response_get_event(++response: *kr_response_t) -> uint32_t;
    fn kr_string_to_address(++string: *c_schar, ++addr: *kr_address_t) ->
     c_int;
    fn kr_unit_control_set(++client: *kr_client_t, ++uc: *kr_unit_control_t)
     -> c_int;
    fn kr_unit_destroy(++client: *kr_client_t, ++address: *kr_address_t);

    fn kr_client_create(++client_name: *c_schar) -> *kr_client_t;
    fn kr_connect(++client: *kr_client_t, ++sysname: *c_schar) -> c_int;
    fn kr_connect_remote(++client: *kr_client_t, ++host: *c_schar,
                         ++port: c_int) -> c_int;
    fn kr_connected(++client: *kr_client_t) -> c_int;
    fn kr_disconnect(++client: *kr_client_t) -> c_int;
    fn kr_client_destroy(++client: **kr_client_t) -> c_int;
    fn kr_client_local(++client: *kr_client_t) -> c_int;
    fn kr_client_get_fd(++client: *kr_client_t) -> c_int;
    fn kr_broadcast_subscribe(++client: *kr_client_t,
                              ++broadcast_id: uint32_t);
    fn kr_subscribe_all(++client: *kr_client_t);
    fn kr_poll(++client: *kr_client_t, ++timeout_ms: uint32_t) -> c_int;

    fn kr_response_free(++kr_response: **kr_response_t);
    fn kr_response_to_string(++kr_response: *kr_response_t,
                             ++string: **c_schar) -> c_int;
    fn kr_response_to_int(++response: *kr_response_t, ++number: *c_int) ->
     c_int;
    fn kr_response_to_float(++response: *kr_response_t, ++number: *c_float) ->
     c_int;
    fn kr_response_alloc_string(++length: c_int) -> *c_schar;
    fn kr_response_free_string(++string: **c_schar);

    fn kr_response_to_rep(++crate: *kr_crate_t) -> c_int;
    fn kr_response_address(++response: *kr_response_t,
                           ++address: **kr_address_t);
    fn kr_address_debug_print(++addr: *kr_address_t);
    fn krad_message_notice_has_payload(++_type: uint32_t) -> c_int;

    fn kr_response_size(++kr_response: *kr_response_t) -> uint32_t;
    fn kr_client_response_wait_print(++client: *kr_client_t);

    fn kr_client_response_get(++client: *kr_client_t,
                              ++kr_response: **kr_response_t);
    fn kr_crate_loaded(++crate: *kr_crate_t) -> c_int;
    fn kr_crate_has_int(++crate: *kr_crate_t) -> c_int;
    fn kr_crate_has_float(++crate: *kr_crate_t) -> c_int;
    fn kr_delivery_wait_until_final(++client: *kr_client_t,
                                    ++timeout_ms: uint32_t) -> c_int;
    fn kr_delivery_final(++client: *kr_client_t) -> c_int;
    fn kr_client_response_wait(++client: *kr_client_t,
                               ++kr_response: **kr_response_t);
    fn kr_shm_create(++client: *kr_client_t) -> *kr_shm_t;
    fn kr_shm_destroy(++kr_shm: *kr_shm_t);
    fn kr_system_info(++client: *kr_client_t);
    fn kr_set_dir(++client: *kr_client_t, ++dir: *c_schar);
    fn kr_remote_list(++client: *kr_client_t);
    fn kr_remote_on(++client: *kr_client_t, ++interface: *c_schar,
                    ++port: c_int) -> c_int;
    fn kr_remote_off(++client: *kr_client_t, ++interface: *c_schar,
                     ++port: c_int) -> c_int;
    fn kr_web_enable(++client: *kr_client_t, ++http_port: c_int,
                     ++websocket_port: c_int, ++headcode: *c_schar,
                     ++header: *c_schar, ++footer: *c_schar);
    fn kr_web_disable(++client: *kr_client_t);
    fn kr_osc_enable(++client: *kr_client_t, ++port: c_int);
    fn kr_osc_disable(++client: *kr_client_t);

    fn kr_read_tag_inner(++client: *kr_client_t, ++tag_item: **c_schar,
                         ++tag_name: **c_schar, ++tag_value: **c_schar);
    fn kr_read_tag(++client: *kr_client_t, ++tag_item: **c_schar,
                   ++tag_name: **c_schar, ++tag_value: **c_schar) -> c_int;
    fn kr_tags(++client: *kr_client_t, ++item: *c_schar);
    fn kr_tag(++client: *kr_client_t, ++item: *c_schar, ++tag_name: *c_schar);
    fn kr_set_tag(++client: *kr_client_t, ++item: *c_schar,
                  ++tag_name: *c_schar, ++tag_value: *c_schar);
}


use core::libc::*;
pub type Struct_kr_videoport_St = c_void;
pub type kr_videoport_t = Struct_kr_videoport_St;
#[link_args = "-lkradradio_client"]
pub extern "C" {

    fn kr_compositor_response_to_string(++kr_response: *kr_response_t,
                                        ++string: **c_schar) -> c_int;
    fn kr_compositor_subunit_list(++client: *kr_client_t);
    fn kr_compositor_subunit_create(++client: *kr_client_t,
                                    ++_type: kr_compositor_subunit_t,
                                    ++option: *c_schar) -> c_int;
    fn kr_compositor_subunit_destroy(++client: *kr_client_t,
                                     ++address: *kr_address_t);
    fn kr_compositor_info(++client: *kr_client_t);
    fn kr_compositor_set_frame_rate(++client: *kr_client_t,
                                    ++numerator: c_int, ++denominator: c_int);
    fn kr_compositor_set_resolution(++client: *kr_client_t, ++width: c_int,
                                    ++height: c_int);
    fn kr_compositor_close_display(++client: *kr_client_t);
    fn kr_compositor_open_display(++client: *kr_client_t, ++width: c_int,
                                  ++height: c_int);
    fn kr_compositor_background(++client: *kr_client_t, ++filename: *c_schar)
     -> c_int;
    fn kr_compositor_snapshot(++client: *kr_client_t);
    fn kr_compositor_snapshot_jpeg(++client: *kr_client_t);
    fn kr_videoport_set_callback(++kr_videoport: *kr_videoport_t,
                                 ++callback: *u8, ++pointer: *c_void);
    fn kr_videoport_activate(++kr_videoport: *kr_videoport_t);
    fn kr_videoport_deactivate(++kr_videoport: *kr_videoport_t);
    fn kr_videoport_create(++client: *kr_client_t) -> *kr_videoport_t;
    fn kr_videoport_destroy(++kr_videoport: *kr_videoport_t);
}

/* automatically generated by rust-bindgen */

use core::libc::*;
pub type Struct_kr_audioport_St = c_void;
pub type kr_audioport_t = Struct_kr_audioport_St;
#[link_args = "-lkradradio_client"]
pub extern "C" {

